k8s/alexa-shopping-list-updater-skill/alexa-shopping-list-updater-skill.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexa-shopping-list-updater-skill
  namespace: home-automation
  labels:
    app.kubernetes.io/name: alexa-shopping-list-updater-skill
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alexa-shopping-list-updater-skill
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alexa-shopping-list-updater-skill
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: alexa-shopping-list-updater-skill
          image: docker.smith-simms.family:5000/alexa-shopping-list-updater-skill:latest
          imagePullPolicy: Always
          ports:
            - name: alexa-http
              containerPort: 80
              protocol: TCP
